[package]
name = "fetchlike"
version = "0.1.2"
authors = ["rin4046 <rin@rinrin.me>"]
description = "A function and macros like JavaScript's Fetch API."
repository = "https://github.com/rin4046/fetchlike"
license = "MIT"
edition = "2021"

[dependencies]
tokio = { version = "1.16.1", features = ["full"] }
hyper = { version = "0.14.17", features = ["full"] }
hyper-tls = "0.5.0"
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.78"
thiserror = "1.0.30"
